--- a/birtExtensionTest/.settings/org.eclipse.wst.common.component
+++ b/birtExtensionTest/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="BirtExtensionTest">
         <wb-resource deploy-path="/" source-path="/webContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
@@ -8,6 +7,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_dataClasses"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_wsproc"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_hd"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_test"/>
         <property name="context-root" value="BirtExtensionTest"/>
         <property name="java-output-path" value="/BirtExtensionTest/classes"/>
     </wb-module>
